--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -34,6 +34,7 @@ jobs:
         echo '  - DOMAIN-SUFFIX,AI.com' >> ai.yaml
         echo '  - DOMAIN-SUFFIX,cdn.auth0.com' >> ai.yaml
         echo '  - DOMAIN-SUFFIX,openaiapi-site.azureedge.net' >> ai.yaml
+        echo '  - DOMAIN-SUFFIX,opendns.com' >> ai.yaml
         echo '  - DOMAIN-SUFFIX,bing.com' >> ai.yaml
     - name: Get GlobalMedia Rule-sets
       env:
