更新特殊地区配置，调整筛选

--- a/rules/SpecialArea.ini
+++ b/rules/SpecialArea.ini
@@ -5,10 +5,10 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 ;节点筛选（排除常用地区：香港、台湾、新加坡、日本、美国）
-exclude_remarks=(香港|HK|((?i)Hong Kong)|🇭🇰|台湾|TW|((?i)Taiwan)|🇹🇼|狮城|新加坡|SG|((?i)Singapore)|🇸🇬|日本|JP|((?i)Japan)|🇯🇵|美国|US|((?i)United States)|🇺🇲)
+include_remarks=^(?!.*?(香港|HK|((?i)Hong Kong)|🇭🇰|台湾|TW|((?i)Taiwan)|🇹🇼|狮城|新加坡|SG|((?i)Singapore)|🇸🇬|日本|JP|((?i)Japan)|🇯🇵|美国|US|((?i)United States)|🇺🇲)).*$
 
 ;主策略组
-custom_proxy_group=🚀 代理加速`select`[]DIRECT`^(?!.*?(香港|HK|((?i)Hong Kong)|🇭🇰|台湾|TW|((?i)Taiwan)|🇹🇼|狮城|新加坡|SG|((?i)Singapore)|🇸🇬|日本|JP|((?i)Japan)|🇯🇵|美国|US|((?i)United States)|🇺🇲)).*$
+custom_proxy_group=🚀 代理加速`select`[]DIRECT`.*
 custom_proxy_group=🌏 国内站点`select`[]DIRECT`[]🚀 代理加速
 custom_proxy_group=🐬 漏网之鱼`select`[]🚀 代理加速`[]DIRECT
 
