--- a/rules/SpecialArea.ini
+++ b/rules/SpecialArea.ini
@@ -10,14 +10,9 @@ include_remarks=^(?!.*?(香港|HK|((?i)Hong Kong)|🇭🇰|台湾|TW|((?i)Taiwan
 ;主策略组
 custom_proxy_group=🚀 代理加速`select`[]DIRECT`.*
 custom_proxy_group=🌏 国内站点`select`[]DIRECT`[]🚀 代理加速
-custom_proxy_group=🐬 漏网之鱼`select`[]🚀 代理加速`[]DIRECT
 
 ;规则集（更新间隔为120秒）
-ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/lan-domain.yaml,120
-ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/google-domain.yaml,120
 ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/proxy-domain.yaml,120
 ruleset=🌏 国内站点,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/cn-domain.yaml,120
-ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/lan-ip.yaml,120
-ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/google-ip.yaml,120
 ruleset=🌏 国内站点,[]GEOIP,CN
-ruleset=🐬 漏网之鱼,[]FINAL
+ruleset=🚀 代理加速,[]FINAL
