--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -41,35 +41,41 @@ jobs:
         GOOGLE_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
       run: |
         cd ./rules/rule-sets
-        curl -sSL -4 --connect-timeout 10 $GOOGLE_URL -o - | grep -v 'IP-CIDR' > google-domain.yaml
-        curl -sSL -4 --connect-timeout 10 $GOOGLE_URL -o - | grep -v 'DOMAIN' > google-ip.yaml
+        echo 'payload:' > google-domain.yaml
+        echo 'payload:' > google-ip.yaml
+        curl -sSL -4 --connect-timeout 10 $GOOGLE_URL -o - | grep 'DOMAIN' >> google-domain.yaml
+        curl -sSL -4 --connect-timeout 10 $GOOGLE_URL -o - | grep 'IP-CIDR' >> google-ip.yaml
     - name: Get Proxy Rule-sets
       env:
         PROXY_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.yaml
       run: |
         cd ./rules/rule-sets
+        echo 'payload:' > proxy-domain.yaml
         curl -sSL -4 --connect-timeout 10 $PROXY_URL -o - \
-        | grep -v 'IP-CIDR' \
+        | grep 'DOMAIN' \
         | egrep -v 'DOMAIN.*(,|\.)[0-9]+\.[A-Za-z]+$' \
-        | egrep -v 'DOMAIN.*(,|\.)[A-Za-z]*[0-9]{4,}[A-Za-z]*\.[A-Za-z]+$' > proxy-domain.yaml
+        | egrep -v 'DOMAIN.*(,|\.)[A-Za-z]*[0-9]{4,}[A-Za-z]*\.[A-Za-z]+$' >> proxy-domain.yaml
     - name: Get CN Rule-sets
       env:
         CN_DOMAIN_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical.yaml
         CN_IP_URL: https://raw.githubusercontent.com/RikudouPatrickstar/GeoIP2-CN/release/cncidr.yaml
       run: |
         cd ./rules/rule-sets
+        echo 'payload:' > cn-domain.yaml
         curl -sSL -4 --connect-timeout 10 $CN_DOMAIN_URL -o - \
-        | grep -v 'IP-CIDR' \
+        | grep 'DOMAIN' \
         | egrep -v 'DOMAIN.*(,|\.)[0-9]+\.[A-Za-z]+$' \
-        | egrep -v 'DOMAIN.*(,|\.)[A-Za-z]*[0-9]{4,}[A-Za-z]*\.[A-Za-z]+$' > cn-domain.yaml
+        | egrep -v 'DOMAIN.*(,|\.)[A-Za-z]*[0-9]{4,}[A-Za-z]*\.[A-Za-z]+$' >> cn-domain.yaml
         curl -sSL -4 --connect-timeout 10 $CN_IP_URL -o cn-ip.yaml
     - name: Get Lan Rules
       env:
         LAN_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml
       run: |
         cd ./rules/rule-sets
-        curl -sSL -4 --connect-timeout 10 $LAN_URL -o - | grep -v 'IP-CIDR' > lan-domain.yaml
-        curl -sSL -4 --connect-timeout 10 $LAN_URL -o - | grep -v 'DOMAIN' > lan-ip.yaml
+        echo 'payload:' > lan-domain.yaml
+        echo 'payload:' > lan-ip.yaml
+        curl -sSL -4 --connect-timeout 10 $LAN_URL -o - | grep 'DOMAIN' >> lan-domain.yaml
+        curl -sSL -4 --connect-timeout 10 $LAN_URL -o - | grep 'IP-CIDR' >> lan-ip.yaml
     - name: Remove IPv6 Rules
       run: |
         cd ./rules/rule-sets
