--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -45,6 +45,13 @@ jobs:
         echo 'payload:' > google-ip.yaml
         curl -sSL -4 --connect-timeout 10 $GOOGLE_URL -o - | grep 'DOMAIN' >> google-domain.yaml
         curl -sSL -4 --connect-timeout 10 $GOOGLE_URL -o - | grep 'IP-CIDR' >> google-ip.yaml
+    - name: Get Apple Rule-sets
+      env:
+        APPLE_URL: https://raw.githubusercontent.com/nicholas-opensource/Rule/main/head.txt
+      run: |
+        cd ./rules/rule-sets
+        curl -sSL -4 --connect-timeout 10 $APPLE_URL -o - | sed -n '/^# Apple/,/# Apple Proxy$/p' | grep -Ev '^# Apple|# Apple Proxy$' | sed 's/,Direct//g' > apple-direct.list
+        curl -sSL -4 --connect-timeout 10 $APPLE_URL -o - | sed -n '/^# Apple Proxy/,/# Netflix$/p' | grep -Ev '^# Apple Proxy|# Netflix$' | sed 's/,Proxy//g' > apple-proxy.list
     - name: Get Proxy Rule-sets
       env:
         PROXY_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.yaml
