--- a/rules/Terminal.ini
+++ b/rules/Terminal.ini
@@ -35,6 +35,8 @@ ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/RikudouPatricksta
 ruleset=🤖 人工智能,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/ai.yaml,120
 ruleset=📺 国外媒体,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/global-media-domain.yaml,120
 ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/google-domain.yaml,120
+ruleset=🌏 国内站点,surge:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/apple-direct.list,120
+ruleset=🚀 代理加速,surge:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/apple-proxy.list,120
 ruleset=🌏 国内站点,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/cn-domain.yaml,120
 ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/proxy-domain.yaml,120
 ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/lan-ip.yaml,120
