--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -109,7 +109,7 @@ jobs:
             sed -i 's/MATCH,.*/FINAL,PROXY/g' clash.rule
             echo '[General]' > Shadowrocket.conf
             echo 'bypass-system = true' >> Shadowrocket.conf
-            echo 'dns-server = system, 119.29.29.29, 223.5.5.5, 223.6.6.6' >> Shadowrocket.conf
+            echo 'dns-server = tls://223.5.5.5, tls://1.12.12.12' >> Shadowrocket.conf
             echo 'skip-proxy = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, localhost, *.local, *.crashlytics.com, *.cn' >> Shadowrocket.conf
             echo 'bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32' >> Shadowrocket.conf
             echo >> Shadowrocket.conf
