--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -110,9 +110,10 @@ jobs:
             echo '[General]' > Shadowrocket.conf
             echo 'ipv6 = false' >> Shadowrocket.conf
             echo 'bypass-system = true' >> Shadowrocket.conf
-            echo 'dns-server = tls://223.5.5.5, tls://1.12.12.12' >> Shadowrocket.conf
-            echo 'skip-proxy = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, localhost, *.local, *.crashlytics.com, *.cn' >> Shadowrocket.conf
+            echo 'dns-server = h3://223.5.5.5/dns-query, tls://223.5.5.5, tls://1.12.12.12' >> Shadowrocket.conf
+            echo 'skip-proxy = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, localhost, *.local, *.crashlytics.com, *.cn, *.push.apple.com, captive.apple.com' >> Shadowrocket.conf
             echo 'bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32' >> Shadowrocket.conf
+            echo 'always-real-ip = *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.battlenet.com.cn, *.battlenet.com, *.battle.net' >> Shadowrocket.conf
             echo >> Shadowrocket.conf
             echo '[Rule]' >> Shadowrocket.conf
             cat clash.rule >> Shadowrocket.conf 
