--- a/rules/rule-sets/ai.yaml
+++ b/rules/rule-sets/ai.yaml
@@ -1,20 +1,25 @@
 payload:
   - DOMAIN,bard.google.com
-  - DOMAIN,cdn.auth0.com
-  - DOMAIN,challenges.cloudflare.com
   - DOMAIN-SUFFIX,ai.com
+  - DOMAIN-SUFFIX,anthropic.com
+  - DOMAIN-SUFFIX,auth0.com
+  - DOMAIN-SUFFIX,bing.com
+  - DOMAIN-SUFFIX,bing.com.cn
+  - DOMAIN-SUFFIX,cdn.auth0.com
+  - DOMAIN-SUFFIX,challenges.cloudflare.com
   - DOMAIN-SUFFIX,civitai.com
+  - DOMAIN-SUFFIX,claude.ai
+  - DOMAIN-SUFFIX,client-api.arkoselabs.com
+  - DOMAIN-SUFFIX,statsigapi.net
   - DOMAIN-SUFFIX,featuregates.org
   - DOMAIN-SUFFIX,identrust.com
   - DOMAIN-SUFFIX,intercom.io
+  - DOMAIN-SUFFIX,intercomcdn.com
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,openai.nooc.ink
   - DOMAIN-SUFFIX,openaiapi-site.azureedge.net
-  - DOMAIN-SUFFIX,openaicom.imgix.net
-  - DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net
-  - DOMAIN-SUFFIX,openaicom-api-bdcpf8c6d2e9atf6.z01.azurefd.net
   - DOMAIN-SUFFIX,opendns.com
+  - DOMAIN-SUFFIX,poe.com
   - DOMAIN-SUFFIX,sentry.io
-  - DOMAIN-SUFFIX,statsigapi.net
-  - DOMAIN-SUFFIX,bing.com
-  - DOMAIN-SUFFIX,bing.com.cn
+  - DOMAIN-SUFFIX,stripe.com
+  - DOMAIN-KEYWORD,openai
