--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -52,6 +52,13 @@ jobs:
         cd ./rules/rule-sets
         curl -sSL -4 --connect-timeout 10 $APPLE_URL -o - | sed -n '/^# Apple/,/# Apple Proxy$/p' | grep -Ev '^# Apple|# Apple Proxy$' | sed 's/,Direct//g' > apple-direct.list
         curl -sSL -4 --connect-timeout 10 $APPLE_URL -o - | sed -n '/^# Apple Proxy/,/# Netflix$/p' | grep -Ev '^# Apple Proxy|# Netflix$' | sed 's/,Proxy//g' > apple-proxy.list
+    - name: Get DouYin Rule-sets
+      env:
+        DOUYIN_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
+      run: |
+        cd ./rules/rule-sets
+        echo 'payload:' > douyin-domain.yaml
+        curl -sSL -4 --connect-timeout 10 $DOUYIN_URL -o - | grep 'DOMAIN' >> douyin-domain.yaml
     - name: Get Proxy Rule-sets
       env:
         PROXY_URL: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ProxyLite/ProxyLite.yaml
