--- a/rules/Terminal.ini
+++ b/rules/Terminal.ini
@@ -31,7 +31,7 @@ ruleset=📺 国外媒体,clash-classic:https://raw.githubusercontent.com/Rikudo
 ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/google-domain.yaml,120
 ruleset=🌏 国内站点,surge:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/apple-direct.list,120
 ruleset=🚀 代理加速,surge:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/apple-proxy.list,120
-ruleset=🌏 国内站点,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/cn-domain.yaml,120
+ruleset=🌏 国内站点,clash-domain:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/cn-domain.yaml,120
 ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/proxy-domain.yaml,120
 ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/lan-ip.yaml,120
 ruleset=📺 国外媒体,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/global-media-ip.yaml,120
