--- a/rules/SpecialArea.ini
+++ b/rules/SpecialArea.ini
@@ -13,6 +13,6 @@ custom_proxy_group=🌏 国内站点`select`[]DIRECT`[]🚀 代理加速
 
 ;规则集（更新间隔为120秒）
 ruleset=🚀 代理加速,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/proxy-domain.yaml,120
-ruleset=🌏 国内站点,clash-classic:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/cn-domain.yaml,120
+ruleset=🌏 国内站点,clash-domain:https://raw.githubusercontent.com/RikudouPatrickstar/Files/master/rules/rule-sets/cn-domain.yaml,120
 ruleset=🌏 国内站点,[]GEOIP,CN
 ruleset=🚀 代理加速,[]FINAL
