--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -14,7 +14,7 @@ env:
   TZ: Asia/Shanghai 
 jobs:
   update-rules:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: Get Code
       uses: actions/checkout@master
