合并其他地区策略组

--- a/rules/Terminal.ini
+++ b/rules/Terminal.ini
@@ -4,14 +4,11 @@
 enable_rule_generator=true
 overwrite_original_rules=true
 
-;节点筛选（只取常用地区：香港、台湾、新加坡、日本、美国）
-include_remarks=(香港|HK|((?i)Hong Kong)|🇭🇰|台湾|TW|((?i)Taiwan)|🇹🇼|狮城|新加坡|SG|((?i)Singapore)|🇸🇬|日本|JP|((?i)Japan)|🇯🇵|美国|US|((?i)United States)|🇺🇲)
-
 
 ;主策略组
-custom_proxy_group=🚀 代理加速`select`[]🚩 香港节点`[]🍌 台湾节点`[]🦁 狮城节点`[]👺 日本节点`[]🗽 美国节点`[]DIRECT
-custom_proxy_group=🤖 人工智能`select`[]🚩 香港节点`[]🍌 台湾节点`[]🦁 狮城节点`[]👺 日本节点`[]🗽 美国节点`[]DIRECT
-custom_proxy_group=📺 国外媒体`select`[]🚩 香港节点`[]🍌 台湾节点`[]🦁 狮城节点`[]👺 日本节点`[]🗽 美国节点`[]DIRECT
+custom_proxy_group=🚀 代理加速`select`[]🚩 香港节点`[]🍌 台湾节点`[]🦁 狮城节点`[]👺 日本节点`[]🗽 美国节点`[]🗺️ 其他节点`[]DIRECT
+custom_proxy_group=🤖 人工智能`select`[]🚩 香港节点`[]🍌 台湾节点`[]🦁 狮城节点`[]👺 日本节点`[]🗽 美国节点`[]🗺️ 其他节点`[]DIRECT
+custom_proxy_group=📺 国外媒体`select`[]🚩 香港节点`[]🍌 台湾节点`[]🦁 狮城节点`[]👺 日本节点`[]🗽 美国节点`[]🗺️ 其他节点`[]DIRECT
 custom_proxy_group=🌏 国内站点`select`[]DIRECT`[]🚀 代理加速
 custom_proxy_group=🐬 漏网之鱼`select`[]🚀 代理加速`[]DIRECT
 
@@ -21,6 +18,7 @@ custom_proxy_group=🍌 台湾节点`url-test`(台湾|TW|((?i)Taiwan)|🇹🇼)`
 custom_proxy_group=🦁 狮城节点`url-test`(狮城|新加坡|SG|((?i)Singapore)|🇸🇬)`http://www.google.com/generate_204`5,,10
 custom_proxy_group=👺 日本节点`url-test`(日本|JP|((?i)Japan)|🇯🇵)`http://www.google.com/generate_204`5,,10
 custom_proxy_group=🗽 美国节点`url-test`(美国|US|((?i)United States)|🇺🇲)`http://www.google.com/generate_204`5,,10
+custom_proxy_group=🗺️ 其他节点`select`^(?!.*?(香港|HK|((?i)Hong Kong)|🇭🇰|台湾|TW|((?i)Taiwan)|🇹🇼|狮城|新加坡|SG|((?i)Singapore)|🇸🇬|日本|JP|((?i)Japan)|🇯🇵|美国|US|((?i)United States)|🇺🇲)).*$
 
 
 ;规则集（更新间隔为120秒）
