--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -8,7 +8,7 @@ on:
       - 'rules/**.ini'
       - '.github/workflows/**.yml'
   schedule:
-    - cron: 10 16 */2 * *
+    - cron: 10 16 */5 * *
   workflow_dispatch:
 env:
   TZ: Asia/Shanghai 
@@ -100,7 +100,7 @@ jobs:
         cd ./rules
         docker run -d --restart=always -p 25500:25500 thisispatrick/subconverter:latest
         sleep 5
-        wget -q 'http://localhost:25500/sub?target=clash&url=123&insert=false&expand=true&new_name=true&config=https%3A%2F%2Fraw.githubusercontent.com%2FRikudouPatrickstar%2FFiles%2Fmaster%2Frules%2FTerminal.ini' -O clash.rule
+        wget -q 'http://localhost:25500/sub?target=clash&url=ss%3A%2F%2FYWVzLTEyOC1nY206dGVzdA%3D%3D%401%2E1%2E1%2E1%3A80%23ss&insert=false&expand=true&new_name=true&config=https%3A%2F%2Fraw.githubusercontent.com%2FRikudouPatrickstar%2FFiles%2Fmaster%2Frules%2FTerminal.ini' -O clash.rule
         if [ "$?" -eq "0" ];then
             echo '正在转换'
             sed -i '/port:/,/rules:/d' clash.rule
@@ -111,18 +111,21 @@ jobs:
             sed -i 's/,🌏 国内站点/,DIRECT/g' clash.rule
             sed -i 's/MATCH,.*/FINAL,PROXY/g' clash.rule
             echo '[General]' > Shadowrocket.conf
+            echo 'always-real-ip = *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.battlenet.com.cn, *.battlenet.com, *.battle.net' >> Shadowrocket.conf
+            echo 'private-ip-answer = true' >> Shadowrocket.conf
             echo 'ipv6 = false' >> Shadowrocket.conf
             echo 'bypass-system = true' >> Shadowrocket.conf
-            echo 'dns-server = h3://223.5.5.5/dns-query, tls://223.5.5.5, tls://1.12.12.12' >> Shadowrocket.conf
-            echo 'skip-proxy = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, localhost, *.local, *.crashlytics.com, *.cn, *.push.apple.com, captive.apple.com' >> Shadowrocket.conf
             echo 'bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32' >> Shadowrocket.conf
-            echo 'always-real-ip = *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.battlenet.com.cn, *.battlenet.com, *.battle.net' >> Shadowrocket.conf
+            echo 'skip-proxy = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, localhost, *.local, *.crashlytics.com, *.cn, *.push.apple.com, captive.apple.com' >> Shadowrocket.conf
+            echo 'dns-server = h3://223.5.5.5/dns-query, https://223.5.5.5/dns-query, tls://1.12.12.12' >> Shadowrocket.conf
+            echo 'fallback-dns-server = system' >> Shadowrocket.conf
             echo >> Shadowrocket.conf
             echo '[Rule]' >> Shadowrocket.conf
             cat clash.rule >> Shadowrocket.conf 
             echo >> Shadowrocket.conf
             echo '[URL Rewrite]' >> Shadowrocket.conf
-            echo '^http://(www.)?google.cn https://www.google.com 302' >> Shadowrocket.conf
+            echo '^https?://(www.)?g.cn https://www.google.com 302' >> Shadowrocket.conf
+            echo '^https?://(www.)?google.cn https://www.google.com 302' >> Shadowrocket.conf
         fi
         rm clash.rule
     - name: Push Shadowrocket Rule
